@@ -1405,7 +1405,7 @@ ags_automation_edit_reset_hscrollbar(AgsAutomationEdit *automation_edit)
   zoom_correction = 1.0 / 16;
 
 //  map_width = ((double) AGS_AUTOMATION_EDITOR_MAX_CONTROLS * zoom * zoom_correction);
-  map_width = ((gui_scale_factor * 64.0) * (16.0 * 16.0 * 1200.0) * zoom * zoom_correction);
+  map_width = ((64.0) * (16.0 * 16.0 * 1200.0) * zoom * zoom_correction);
   upper = map_width - allocation.width;
 
   if(upper < 0.0){    
@@ -1421,7 +1421,7 @@ ags_automation_edit_reset_hscrollbar(AgsAutomationEdit *automation_edit)
   automation_edit->ruler->scale_precision = 1.0 / zoom;
 
   gtk_adjustment_set_upper(automation_edit->ruler->adjustment,
-			   upper / automation_edit->control_width);
+			   upper);
 
   /* reset value */
   if(old_upper != 0.0){
