@@ -35,6 +35,12 @@
   <url type="homepage">https://nongnu.org/gsequencer</url>
 
   <releases>
+    <release version="3.6.29" date="2020-11-27">
+      <description>
+	<p>Improved notation, automation and wave editor to do proper GUI scale.</p>
+      </description>
+    </release>
+
     <release version="3.6.28" date="2020-11-26">
       <description>
 	<p>Fixed meson build.</p>
