@@ -1,3 +1,8 @@
+ags (3.6.29)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed gui-scale factor applied to AgsNotationEdit, AgsAutomationEdit and AgsWaveEdit
+
 ags (3.6.28)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
